# tauri-ble

./: .gitignore  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  prompt.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: android-release.yml  desktop-release.yml  release.yml  win-release.yml
.roo/: mcp.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: airpressure_config.rs  airpressure_info.rs  channel_config.rs  mod.rs  open.rs  ota.rs  ping.rs  reboot.rs  valve_config.rs  valve_info.rs
src-tauri/src/ota/: mod.rs  sample.rs
src-tauri/src/transfer/: ble.rs  mod.rs
src/app/: layout.tsx  page.tsx
src/app/[deviceName]/: page.tsx
src/components/bluetooth/: device-card.tsx  device-details-view.tsx  device-info.tsx  device-list-sidebar.tsx  device-ota.tsx  scan-button.tsx
src/components/device/airpressure/: airpressure-config.tsx  airpressure-info.tsx
src/components/device/channel/: channel-config.tsx  channel-info.tsx
src/components/device/valve/: valve-conig.tsx  valve-info.tsx
src/components/layout/: main-content.tsx  main-header.tsx  main-layout.tsx
src/components/ota/: ota-page.tsx
src/context/: OtaProgressContext.tsx
src/forms/: command-form.tsx  valve-form.tsx
src/types/: airpressure.tsx  valve.tsx
src/view/: main-layout.tsx
